# aipprentice

./: README.md  pyproject.toml
aipprentice/: README.md  pyproject.toml
aipprentice/output/: post.md  post_2024-12-28 17:29:14.434607.md
aipprentice/src/aipprentice/: crew.py  main.py
aipprentice/src/aipprentice/config/: agents.yaml  tasks.yaml
src/aipprentice/: __init__.py
src_old/aipprentice/: crew.py  main.py  prompts.py
src_old/aipprentice/config/: tasks.yaml
