[project]
name = "aipprentice"
version = "0.1.0"
description = "aipprentice using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
aipprentice = "aipprentice.main:run"
run_crew = "aipprentice.main:run"
train = "aipprentice.main:train"
replay = "aipprentice.main:replay"
test = "aipprentice.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
